# mwe_hipsycl_cufft

./: CMakeLists.txt  README.md
src/: mwe.cpp
